# QiitaGameLib

./: CMakeLists.txt  README.md  compile_flags.txt
impls/: CMakeLists.txt
impls/Article0/: CMakeLists.txt  main.cpp
impls/Article1/: CMakeLists.txt  init.cpp  main.cpp  window.cpp
impls/Article2/: CMakeLists.txt  buffer.cpp  init.cpp  main.cpp  window.cpp
includes/: init.hpp
includes/Article1/: init.hpp  window.hpp
includes/Article2/: buffer.hpp  init.hpp
